# kestrel

./: .gitignore  README.md
ESP32/pwm_to_sbus/: pwm_to_sbus.ino
ESP32/test/: test.ino
KESTREL/: KESTREL.kicad_prl  KESTREL.kicad_pro  KESTREL.kicad_sch
app/Kestrel/: CMakeCache.txt  CMakeLists.txt  Kestrel.qmlproject  Kestrel.qmlproject.qtds  Kestrel.qrc  qds.cmake
app/Kestrel/App/: CMakeLists.txt  main.cpp  windowcontroller.cpp  windowcontroller.h
app/Kestrel/App/autogen/: environment.h
app/Kestrel/Kestrel/: CMakeLists.txt  Constants.qml  Kestrelplugin_KestrelPlugin.cpp  Kestrelplugin_KestrelPlugin_in.cpp  Kestrelplugin_init.cpp  kestrel_qmltyperegistrations.cpp  qmldir
app/Kestrel/KestrelContent/: App.qml  CMakeLists.txt  CreateProjectWindow.qml  Create_Project.ui.qml  Database.ui.qml  Database.ui.qml.autosave  Flight_Logs.ui.qml  KestrelContentplugin_KestrelContentPlugin.cpp  KestrelContentplugin_KestrelContentPlugin_in.cpp  KestrelContentplugin_init.cpp  MapScreen.ui.qml  MapScreen.ui.qml.autosave  Reports.ui.qml  Screen01.ui.qml  ViewHeader.qml  kestrelcontent_qmltyperegistrations.cpp  qmldir
app/Kestrel/src/: CreateProjectController.cpp  CreateProjectController.h  FileDialogHelper.cpp  FileDialogHelper.h  PathHelper.cpp  PathHelper.h  ProjectCreator.cpp  ProjectCreator.h  ProjectLoader.cpp  (+3 more)
imgprocessing/: environment.yml  layerstorgb.py
kestrel_ui_demo/: README.md  pubspec.yaml
kestrel_ui_demo/lib/: main.dart
kestrel_ui_demo/linux/: CMakeLists.txt
kestrel_ui_demo/web/: index.html  manifest.json
kestrel_ui_demo/windows/: CMakeLists.txt
(+19 files in other folders)
